/*
 * $Id: ChangeLog,v 1.1084 2013-07-01 19:34:25 migsoft Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-07-01 14:53 UTC-0400 MigSoft <migsoft@oohg.org>
   * ./buildapp.bat
   * samples/oohg/build.bat
     * Some comments added.
     * Paths and environment variables changed to match OOHG defaults.
       To use a different version of Harbour and/or MinGW compilers,
       edit buildapp.bat and change HBPATH and/or MINGWPATH variables.

2013-06-30 23:01 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Misspelled word corrected.
     * Added new notes to previous entry.
   * doc/classes.txt
     * Updated.
   * include/i_grid.prg
     ! Added missing ON ABORTEDIT clause and corresponding parameter
       in splitbox version of Grid control.
   * source/h_checklist.prg
     + Added new parameters to ::Super:Define() call.
   * source/h_grid.prg
     + Added DATAs bBeforeColMove, bAfterColMove, bBeforeColSize,
       bAfterColSize and bBeforeAutofit.
     + Added support for BEFORECOLMOVE, AFTERCOLMOVE, BEFORECOLSIZE,
       AFTERCOLSIZE and BEFOREAUTOFIT clauses in FUNCTION
       _OOHG_TGrid_Notify2().
     + Added METHOD ColumnOrder(aColumnOrder) to set/get the
       order used to display the columns in the grid.
   * source/h_xbrowse.prg
   * source/h_browse.prg
   * include/i_grid.prg
   * include/i_browse.prg
   * include/i_xbrowse.prg
   * include/i_altsyntax.prg
   * include/i_hmg_compat.prg
     + Added BEFORECOLMOVE clause to TGrid, TGridMulti, TGridByCell
       TXBrowse and TOBrowse classes. Specifies a codeblock that is
       evaluated when the user starts dragging a column header.
       The column number is passed as a parameter.
       If the codeblock returns .F. the dragging is not allowed.
     + Added ON AFTERCOLMOVE clause to TGrid, TGridMulti, TGridByCell