@@ -1,11 +1,19 @@
 /*
- * $Id: ChangeLog,v 1.1084 2013-07-01 19:34:25 migsoft Exp $
+ * $Id: ChangeLog,v 1.1085 2013-07-02 21:47:50 migsoft Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-07-02 17:37 UTC-0400 MigSoft <migsoft@oohg.org>
+   * ./Changelog
+   * include/oohg.h
+   * source/h_form.prg
+   * source/h_dll.prg
+   * source/h_datepicker.prg
+     * HB_* compatibility commands
 
 2013-07-01 14:53 UTC-0400 MigSoft <migsoft@oohg.org>
    * ./buildapp.bat
